Bug 422127 - Date-fields in duplicate an item
Summary: Date-fields in duplicate an item
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.3.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-27 08:07 UTC by Fabiano Caruana
Modified: 2020-08-21 21:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabiano Caruana 2020-05-27 08:07:11 UTC
SUMMARY

If I duplicate an item, the date fields "created on:" and "modified on:" are filled with the value of the copied item.
It would make a lot of sense if the "created on:" field was filled with the current date, especially because this field cannot be changed manually.

greetings
Udo

STEPS TO REPRODUCE
1. duplicate an item
2. take a look at "created on:"
3. 

OBSERVED RESULT
the new item has the date "created on:" of the copied item

EXPECTED RESULT
the new item should have the current date

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.12.8
KDE Frameworks Version: 5.55.0
Qt Version: 5.9.7

ADDITIONAL INFORMATION
Comment 1 Robby Stephenson 2020-05-28 01:24:06 UTC
Git commit 9869b15dcfdc9e305ea7571d32fa60e7abbc8426 by Robby Stephenson.
Committed on 28/05/2020 at 01:23.
Pushed by rstephenson into branch '3.3'.

Fix bug for setting creation date field for duplicated entries
FIXED-IN: 3.3.1

M  +4    -0    ChangeLog
M  +5    -1    src/entry.cpp
M  +18   -0    src/tests/collectiontest.cpp

https://invent.kde.org/office/tellico/commit/9869b15dcfdc9e305ea7571d32fa60e7abbc8426
Comment 2 Robby Stephenson 2020-05-28 01:24:39 UTC
Git commit 63a7a6bdbc9cd8c9dd4bae413e8f9915ebaf9110 by Robby Stephenson.
Committed on 28/05/2020 at 01:22.
Pushed by rstephenson into branch 'master'.

Fix bug for setting creation date field for duplicated entries
FIXED-IN: 3.3.1

M  +4    -0    ChangeLog
M  +5    -1    src/entry.cpp
M  +18   -0    src/tests/collectiontest.cpp

https://invent.kde.org/office/tellico/commit/63a7a6bdbc9cd8c9dd4bae413e8f9915ebaf9110
Comment 3 Fabiano Caruana 2020-06-02 18:05:19 UTC
Thank you for the prompt fixing.

greetings
Udo
Comment 4 Fabiano Caruana 2020-08-17 13:41:53 UTC
Sorry Robby,

In Version 3.3.2 this Bug is present again.

greetings
Udo
Comment 5 Robby Stephenson 2020-08-18 01:00:38 UTC
Git commit bd336b2c1d913edec9e130e0a59342a23112c433 by Robby Stephenson.
Committed on 18/08/2020 at 00:59.
Pushed by rstephenson into branch '3.3'.

Fix regression for created and modified dates for duplicated entries

A recent fix to account for imported entries with modified date value
but not create ddate value broke the fix for this bug, so expand the
unit test and clear both date values in the Entry constructors.
FIXED-IN: 3.3.3

M  +4    -0    ChangeLog
M  +2    -0    src/entry.cpp
M  +5    -0    src/tests/collectiontest.cpp

https://invent.kde.org/office/tellico/commit/bd336b2c1d913edec9e130e0a59342a23112c433
Comment 6 Robby Stephenson 2020-08-18 01:01:30 UTC
(In reply to Fabiano Caruana from comment #4)
> In Version 3.3.2 this Bug is present again.

Sorry about that. I fixed a different bug and ended up re-opening this one. Thanks for letting me know again!
Comment 7 Robby Stephenson 2020-08-21 21:25:45 UTC
Git commit 2fbb5692b10df068bb9c7c4304c7ee240780af3d by Robby Stephenson.
Committed on 18/08/2020 at 01:00.
Pushed by rstephenson into branch 'master'.

Fix regression for created and modified dates for duplicated entries

A recent fix to account for imported entries with modified date value
but not create ddate value broke the fix for this bug, so expand the
unit test and clear both date values in the Entry constructors.
FIXED-IN: 3.3.3

M  +4    -0    ChangeLog
M  +2    -0    src/entry.cpp
M  +5    -0    src/tests/collectiontest.cpp

https://invent.kde.org/office/tellico/commit/2fbb5692b10df068bb9c7c4304c7ee240780af3d