Fix bug for setting creation date field for duplicated entries

BUG: 422127
FIXED-IN: 3.3.1